--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
   animation-name: example1;
   animation-duration: 5s;
   animation-timing-function: linear;
-  animation-delay: 6s;
+  animation-delay: 10;
   animation-direction: alternate;
   animation-iteration-count: infinite;
 }
@@ -33,7 +33,7 @@
   animation-name: example2;
   animation-duration: 5s;
   animation-timing-function: linear;
-  animation-delay: 6s;
+  animation-delay: 10s;
   animation-direction: alternate;
   animation-iteration-count: infinite;
 }
@@ -53,7 +53,7 @@
   animation-name: example3;
   animation-duration: 5s;
   animation-timing-function: linear;
-  animation-delay: 6s;
+  animation-delay: 10s;
   animation-direction: alternate;
   animation-iteration-count: infinite;
 }
@@ -97,3 +97,4 @@
 .tash1:hover{
     transform: translate(0,-20px);
 }
+
